--- a/blob-detect2.ipynb
+++ b/blob-detect2.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import pandas as pd"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -30,7 +28,7 @@
    "source": [
     "# downscale image\n",
     "times = 8\n",
-    "img = cv2.resize(img, (img.shape[1]//times, img.shape[0]//times))\n",
+    "img = cv2.resize(img, (img.shape[1] // times, img.shape[0] // times))\n",
     "img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)"
    ]
   },
@@ -95,11 +93,11 @@
    ],
    "source": [
     "# subtract the green channel from the red channel\n",
-    "result = np.zeros((g.shape[0], g.shape[1]), dtype='uint8')\n",
+    "result = np.zeros((g.shape[0], g.shape[1]), dtype=\"uint8\")\n",
     "for i in range(g.shape[0]):\n",
     "    for j in range(g.shape[1]):\n",
-    "        val1 = r[i][j].astype('int8')\n",
-    "        val2 = g[i][j].astype('int8')\n",
+    "        val1 = r[i][j].astype(\"int8\")\n",
+    "        val2 = g[i][j].astype(\"int8\")\n",
     "        res = val1 - val2\n",
     "        # make sure the value is not negative\n",
     "        if res < 0:\n",
@@ -435,9 +433,7 @@
    ],
    "source": [
     "# filter the contours by area\n",
-    "filtered_contours = [\n",
-    "    contour for contour in contours if cv2.contourArea(contour) > 250\n",
-    "]\n",
+    "filtered_contours = [contour for contour in contours if cv2.contourArea(contour) > 250]\n",
     "filtered_contours"
    ]
   },
