collected into one program, fine tune

--- a/blob-detect2 copy.ipynb
+++ b/blob-detect2 copy.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24faa007890>"
+       "<matplotlib.image.AxesImage at 0x24c5bdd1650>"
       ]
      },
      "execution_count": 4,
@@ -94,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24fab0f16d0>"
+       "<matplotlib.image.AxesImage at 0x24c5bef7a90>"
       ]
      },
      "execution_count": 5,
@@ -150,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x24fab12ab50>"
+       "<matplotlib.image.AxesImage at 0x24c5bf57a90>"
       ]
      },
      "execution_count": 7,
